Fix image properties

--- a/imageLabelling.ini
+++ b/imageLabelling.ini
@@ -3,3 +3,8 @@ hostname=localhost
 databasename=bookdata
 username=root
 passwd=123456
+
+[Image]
+imagePath=/home/fei/Desktop/original/
+resultPath=/home/fei/Desktop/result/
+maskPath=/home/fei/Desktop/mask/
