--- a/imageLabelling.ini
+++ b/imageLabelling.ini
@@ -4,7 +4,9 @@ databasename=bookdata
 username=root
 passwd=123456
 
-[Image]
-imagePath=/home/fei/Desktop/original/
-resultPath=/home/fei/Desktop/result/
-maskPath=/home/fei/Desktop/mask/
+[IMAGE]
+pathImage=/home/fei/Desktop/original/
+pathResult=/home/fei/Desktop/result/
+pathMask=/home/fei/Desktop/mask/
+extResult=png
+extMask=bmp
