--- a/imageLabelling.ini
+++ b/imageLabelling.ini
@@ -5,8 +5,8 @@ username=root
 passwd=123456
 
 [IMAGE]
-pathImage=c:/copyTo/
-pathResult=C:/result/
-pathMask=c:/mask/
+pathImage=/home/fei/Desktop/copyTo/
+pathResult=/home/fei/Desktop/result/
+pathMask=/home/fei/Desktop/mask/
 extResult=png
 extMask=bmp
