--- a/imageLabelling.ini
+++ b/imageLabelling.ini
@@ -2,7 +2,7 @@
 hostname=localhost
 databasename=bookdata
 username=root
-passwd=zxy082
+passwd=123456
 
 [IMAGE]
 pathImage=/home/fei/Desktop/copyTo/
