--- a/imageLabelling.ini
+++ b/imageLabelling.ini
@@ -8,5 +8,5 @@ passwd=123456
 pathImage=/home/fei/Desktop/copyTo/
 pathResult=/home/fei/Desktop/result/
 pathMask=/home/fei/Desktop/mask/
-extResult=png
-extMask=bmp
+extResult=jpg
+extMask=jpg
