--- a/imageLabelling.ini
+++ b/imageLabelling.ini
@@ -5,8 +5,8 @@ username=root
 passwd=123456
 
 [IMAGE]
-pathImage=/home/fei/Desktop/copyTo/
-pathResult=/home/fei/Desktop/result/
-pathMask=/home/fei/Desktop/mask/
+pathImage=c:/copyTo/
+pathResult=c:/result/
+pathMask=c:/mask/
 extResult=png
 extMask=jpg
